# EverythingByC

./: README.md  typedef.h
data-structures/: CMakeLists.txt  main.c
data-structures/inc/: string.h  typedef.h  vector.h
data-structures/src/: string.c  vector.c
data-structures/string/: string.c
data-structures/vector/: README.md  research.cpp
data-structures/vector/research/: research.cpp
data-structures/vector/src/: main.c  vector.c  vector.h
data-structures/vector/vector/: vector.c  vector.h
interpreter/: base_types.h  lexer.c  lexer.h  main  main.c  parser.c  parser.h  string.h  typedef.h  vector.h
own-shell/: CMakeLists.txt  main.c  string8.h  typedef.h  vector.h
own-shell/inc/: app_state.h  executor.h  parser.h  typedef.h  utils.h
own-shell/src/: app_state.c  executor.c  parser.c  utils.c
